Fix slideshow teaser overflow.

--- a/twocolslideshow_frontpage/theme/twocolslideshow_frontpage.css
+++ b/twocolslideshow_frontpage/theme/twocolslideshow_frontpage.css
@@ -55,6 +55,7 @@
     width: 680px;
     height: 309px;
     background-image: url(images/carousel1_background_3.jpg);
+    overflow: hidden;
   }
 
   div.carousel1 span.accent
